# STM32-Firmware

./: dronecan_node.py
ifd9000-firmware/: .gitmodules  CMakeLists.txt
ifd9000-firmware/boards/payload_ctrl/: CMakeLists.txt
ifd9000-firmware/boards/payload_ctrl/app/: main.c
ifd9000-firmware/boards/payload_ctrl/bsp/: STM32C092CBTx_FLASH.ld
ifd9000-firmware/cmake/: arm-none-eabi.cmake
ifd9000-firmware/completed_code/: main.c
